fixed layout issues

--- a/src/components/GetTested/GetTested.css
+++ b/src/components/GetTested/GetTested.css
@@ -3,14 +3,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 200px;
     gap: 100px;
+    padding-top: 150px;
+    padding-bottom: 50px;
 }
 
 .test-locations {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 40px;
     text-align: center;
 }
 
@@ -19,6 +20,7 @@
 }
 
 .gt-locationSelect {
+    width: 100%;
     display: flex;
     flex-direction: row;
     gap: 10px;
@@ -27,18 +29,13 @@
 
 @media only screen and (max-width: 600px) {
     .gt-locationSelect {
-        display: flex;
         flex-direction: column;
         gap: 15px;
-        justify-content: center;
     }
 
     #city-input {
         margin-left: 0;
     }
-
-    .gt-innerContainer {
-        width: 100%;
-    }
 }
+
 
