--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -11,6 +11,6 @@
 @media only screen and (max-width: 500px) {
     .nav-container {
         justify-content: space-between;
-        padding: 10px 10px;
+        padding: 10px 20px;
     }
 }
