--- a/src/components/Stats/Stats.css
+++ b/src/components/Stats/Stats.css
@@ -11,11 +11,11 @@
 }
 
 #deaths-txt {
-    color: #B22222;
+    color: crimson;
 }
 
 #recovered-txt {
-    color: #228B22;
+    color: #32CD32;
 }
 
 @media only screen and (max-width: 520px) {
@@ -26,9 +26,6 @@
     }
 
     .stats-innerContainer {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        gap: 100px;
+        padding-top: 100px;
     }
 }
